--- a/docs/event-catalog/daily.data.meal.created.mdx
+++ b/docs/event-catalog/daily.data.meal.created.mdx
@@ -3,119 +3,131 @@ title: "daily.data.meal.created"
 description: "A new meal has been created"
 api: "GET /"
 ---
-<ResponseField name="event_type" type="string" required="false">
+<Warning>
+Each summary object is uniquely identified by its `id`.
+
+If multiple events are received at the same `id`, the last event received replaces all its previous
+versions.
+</Warning>
+<ResponseField name="event_type" type="const string" required="True">
+`daily.data.meal.created`
+</ResponseField>
+<ResponseField name="data" type="MealInDBBase_ClientFacingSource_">
+
+<Expandable title="MealInDBBase_ClientFacingSource_" defaultOpen="true">
+<ResponseField name="id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="data" type="MealInDBBase_ClientFacingSource_" required="true">
-<Expandable title="MealInDBBase_ClientFacingSource_">
-<ResponseField name="id" type="string" required="true">
+<ResponseField name="user_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="user_id" type="string" required="true">
+<ResponseField name="priority_id" type="integer" required="True">
 
 </ResponseField>
-<ResponseField name="priority_id" type="integer" required="true">
+<ResponseField name="source_id" type="integer" required="True">
 
 </ResponseField>
-<ResponseField name="source_id" type="integer" required="true">
+<ResponseField name="provider_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="provider_id" type="string" required="true">
+<ResponseField name="timestamp" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="timestamp" type="string" required="true">
+<ResponseField name="name" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
+<ResponseField name="energy" type="Energy | null">
+
+<Expandable title="Energy" defaultOpen="true">
+<ResponseField name="unit" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="energy" type="Energy" required="false">
-<Expandable title="Energy">
-<ResponseField name="unit" type="string" required="true">
-
-</ResponseField>
-<ResponseField name="value" type="number" required="true">
-
-</ResponseField>
-</Expandable>
-</ResponseField>
-<ResponseField name="macros" type="Macros" required="false">
-<Expandable title="Macros">
-<ResponseField name="carbs" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="protein" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="fats" type="Fats" required="false">
-<Expandable title="Fats">
-<ResponseField name="saturated" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="monounsaturated" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="polyunsaturated" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="omega3" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="omega6" type="number" required="false">
-
-</ResponseField>
-<ResponseField name="total" type="number" required="false">
+<ResponseField name="value" type="number" required="True">
 
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="alcohol" type="number" required="false">
+<ResponseField name="macros" type="Macros | null">
+
+<Expandable title="Macros" defaultOpen="true">
+<ResponseField name="carbs" type="number | null" required="False">
 
 </ResponseField>
-<ResponseField name="water" type="number" required="false">
+<ResponseField name="protein" type="number | null" required="False">
 
 </ResponseField>
-<ResponseField name="fibre" type="number" required="false">
+<ResponseField name="fats" type="Fats | null">
+
+<Expandable title="Fats" defaultOpen="true">
+<ResponseField name="saturated" type="number | null" required="False">
 
 </ResponseField>
-<ResponseField name="sugar" type="number" required="false">
+<ResponseField name="monounsaturated" type="number | null" required="False">
+
+</ResponseField>
+<ResponseField name="polyunsaturated" type="number | null" required="False">
+
+</ResponseField>
+<ResponseField name="omega3" type="number | null" required="False">
+
+</ResponseField>
+<ResponseField name="omega6" type="number | null" required="False">
+
+</ResponseField>
+<ResponseField name="total" type="number | null" required="False">
 
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="micros" type="Micros" required="false">
-<Expandable title="Micros">
-<ResponseField name="minerals" type="object" required="false">
+<ResponseField name="alcohol" type="number | null" required="False">
 
 </ResponseField>
-<ResponseField name="trace_elements" type="object" required="false">
+<ResponseField name="water" type="number | null" required="False">
 
 </ResponseField>
-<ResponseField name="vitamins" type="object" required="false">
+<ResponseField name="fibre" type="number | null" required="False">
+
+</ResponseField>
+<ResponseField name="sugar" type="number | null" required="False">
 
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="data" type="object" required="false">
+<ResponseField name="micros" type="Micros | null">
+
+<Expandable title="Micros" defaultOpen="true">
+<ResponseField name="minerals" type="object | null" required="False">
 
 </ResponseField>
-<ResponseField name="source" type="ClientFacingSource" required="true">
-<Expandable title="ClientFacingSource">
-<ResponseField name="name" type="string" required="true">
+<ResponseField name="trace_elements" type="object | null" required="False">
+
+</ResponseField>
+<ResponseField name="vitamins" type="object | null" required="False">
+
+</ResponseField>
+</Expandable>
+</ResponseField>
+<ResponseField name="data" type="object | null" required="False">
+
+</ResponseField>
+<ResponseField name="source" type="ClientFacingSource">
+
+<Expandable title="ClientFacingSource" defaultOpen="true">
+<ResponseField name="name" type="string" required="True">
 Name of source of information
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
+<ResponseField name="slug" type="string" required="True">
 Slug for designated source
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
+<ResponseField name="logo" type="string" required="True">
 URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="created_at" type="string" required="true">
+<ResponseField name="created_at" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="updated_at" type="string" required="true">
+<ResponseField name="updated_at" type="string" required="True">
 
 </ResponseField>
 </Expandable>
@@ -187,4 +199,4 @@ URL for source logo
   }
 }
 ```
-</ResponseExample> 
+</ResponseExample>
