--- a/docs/event-catalog/daily.data.profile.created.mdx
+++ b/docs/event-catalog/daily.data.profile.created.mdx
@@ -3,32 +3,41 @@ title: "daily.data.profile.created"
 description: "User profile data has been updated"
 api: "GET /"
 ---
-<ResponseField name="event_type" type="string" required="false">
+<Warning>
+Each summary object is uniquely identified by its `id`.
 
+If multiple events are received at the same `id`, the last event received replaces all its previous
+versions.
+</Warning>
+<ResponseField name="event_type" type="const string" required="True">
+`daily.data.profile.created`
 </ResponseField>
-<ResponseField name="data" type="ClientFacingProfile" required="true">
-<Expandable title="ClientFacingProfile">
-<ResponseField name="user_id" type="string" required="true">
+<ResponseField name="data" type="ClientFacingProfile">
+
+<Expandable title="ClientFacingProfile" defaultOpen="true">
+<ResponseField name="user_id" type="string" required="True">
 User id returned by vital create user request. This id should be stored in your database against the user and used for all interactions with the vital api.
 </ResponseField>
-<ResponseField name="user_key" type="string" required="false">
+<ResponseField name="user_key" type="string | null" required="False">
+[⚠️ Deprecated]
 User key returned by vital create user key request. This key should be stored in your database against the user and used for all interactions with the vital api.
 </ResponseField>
-<ResponseField name="id" type="string" required="true">
+<ResponseField name="id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="height" type="integer" required="false">
+<ResponseField name="height" type="integer | null" required="False">
 
 </ResponseField>
-<ResponseField name="source" type="ClientFacingSource" required="true">
-<Expandable title="ClientFacingSource">
-<ResponseField name="name" type="string" required="true">
+<ResponseField name="source" type="ClientFacingSource">
+
+<Expandable title="ClientFacingSource" defaultOpen="true">
+<ResponseField name="name" type="string" required="True">
 Name of source of information
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
+<ResponseField name="slug" type="string" required="True">
 Slug for designated source
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
+<ResponseField name="logo" type="string" required="True">
 URL for source logo
 </ResponseField>
 </Expandable>
@@ -40,15 +49,15 @@ URL for source logo
 {
   "event_type": "daily.data.profile.created",
   "data": {
-    "id": "550ceb57-34d4-43b7-aaba-c299dd52a3c9",
+    "id": "7bf51191-88a5-4dfd-b194-8458fb4bc5e7",
     "height": 183,
     "source": {
       "name": "Oura",
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "2d30c0fc-455e-4f71-a632-f957aad06904"
+    "user_id": "80b806b9-6fde-44e0-a689-b4e307dbfa07"
   }
 }
 ```
-</ResponseExample> 
+</ResponseExample>
