--- a/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
+++ b/docs/event-catalog/daily.data.workout_stream.unavailable.mdx
@@ -3,42 +3,51 @@ title: "daily.data.workout_stream.unavailable"
 description: "We failed to find a workout stream associated with this data"
 api: "GET /"
 ---
-<ResponseField name="event_type" type="string" required="false">
+<Warning>
+Each summary object is uniquely identified by its `id`.
+
+If multiple events are received at the same `id`, the last event received replaces all its previous
+versions.
+</Warning>
+<ResponseField name="event_type" type="const string" required="True">
+`daily.data.workout_stream.unavailable`
+</ResponseField>
+<ResponseField name="data" type="WorkoutStreamUnavailable">
+
+<Expandable title="WorkoutStreamUnavailable" defaultOpen="true">
+<ResponseField name="user_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="data" type="WorkoutStreamUnavailable" required="true">
-<Expandable title="WorkoutStreamUnavailable">
-<ResponseField name="user_id" type="string" required="true">
+<ResponseField name="workout_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="workout_id" type="string" required="true">
+<ResponseField name="message" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="message" type="string" required="true">
+<ResponseField name="source" type="ClientFacingSource">
 
-</ResponseField>
-<ResponseField name="source" type="ClientFacingSource" required="true">
-<Expandable title="ClientFacingSource">
-<ResponseField name="name" type="string" required="true">
+<Expandable title="ClientFacingSource" defaultOpen="true">
+<ResponseField name="name" type="string" required="True">
 Name of source of information
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
+<ResponseField name="slug" type="string" required="True">
 Slug for designated source
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
+<ResponseField name="logo" type="string" required="True">
 URL for source logo
 </ResponseField>
 </Expandable>
 </ResponseField>
-<ResponseField name="sport" type="ClientFacingSport" required="true">
-<Expandable title="ClientFacingSport">
-<ResponseField name="id" type="integer" required="true">
+<ResponseField name="sport" type="ClientFacingSport">
+
+<Expandable title="ClientFacingSport" defaultOpen="true">
+<ResponseField name="id" type="integer" required="True">
 
 </ResponseField>
-<ResponseField name="name" type="string" required="true">
-Sport's name
+<ResponseField name="name" type="string" required="True">
+Sport&#x27;s name
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
+<ResponseField name="slug" type="string" required="True">
 Slug for designated sport
 </ResponseField>
 </Expandable>
@@ -50,8 +59,8 @@ Slug for designated sport
 {
   "event_type": "daily.data.workout_stream.unavailable",
   "data": {
-    "user_id": "d08d2d04-bbf5-440b-aeee-772914791462",
-    "workout_id": "ffad8381-411f-49ca-9b90-640eb137c1dd",
+    "user_id": "2423f9cd-62ae-4711-83d4-860d60044c13",
+    "workout_id": "f9af675f-bb5d-479a-8443-5c7a581d2bd3",
     "message": "The stream for this workout is not available.",
     "source": {
       "name": "Oura",
@@ -66,4 +75,4 @@ Slug for designated sport
   }
 }
 ```
-</ResponseExample> 
+</ResponseExample>
