--- a/docs/event-catalog/provider.connection.created.mdx
+++ b/docs/event-catalog/provider.connection.created.mdx
@@ -3,26 +3,28 @@ title: "provider.connection.created"
 description: "Provider Connection has been established"
 api: "GET /"
 ---
-<ResponseField name="event_type" type="string" required="false">
+<ResponseField name="event_type" type="const string" required="True">
+`provider.connection.created`
+</ResponseField>
+<ResponseField name="data" type="ProviderConnectionCreated">
+
+<Expandable title="ProviderConnectionCreated" defaultOpen="true">
+<ResponseField name="user_key" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="data" type="ProviderConnectionCreated" required="true">
-<Expandable title="ProviderConnectionCreated">
-<ResponseField name="user_key" type="string" required="true">
+<ResponseField name="user_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="user_id" type="string" required="true">
+<ResponseField name="source" type="ClientFacingSource">
 
-</ResponseField>
-<ResponseField name="source" type="ClientFacingSource" required="true">
-<Expandable title="ClientFacingSource">
-<ResponseField name="name" type="string" required="true">
+<Expandable title="ClientFacingSource" defaultOpen="true">
+<ResponseField name="name" type="string" required="True">
 Name of source of information
 </ResponseField>
-<ResponseField name="slug" type="string" required="true">
+<ResponseField name="slug" type="string" required="True">
 Slug for designated source
 </ResponseField>
-<ResponseField name="logo" type="string" required="true">
+<ResponseField name="logo" type="string" required="True">
 URL for source logo
 </ResponseField>
 </Expandable>
@@ -39,9 +41,9 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "0c69748e-6b02-4ed6-83e1-9ef031a40000",
-    "user_key": "5edf82ab-22a2-4b50-a5f9-3d9f93524a8d"
+    "user_id": "794694f2-fa99-4cc1-b866-ae5b9630e739",
+    "user_key": "91904cc6-b591-4b5e-b18c-6625d1e01078"
   }
 }
 ```
-</ResponseExample> 
+</ResponseExample>
