--- a/docs/event-catalog/provider.connection.error.mdx
+++ b/docs/event-catalog/provider.connection.error.mdx
@@ -3,24 +3,25 @@ title: "provider.connection.error"
 description: "Provider Connection failed to be established, or has failed due to user credential changes."
 api: "GET /"
 ---
-<ResponseField name="event_type" type="string" required="false">
+<ResponseField name="event_type" type="const string" required="True">
+`provider.connection.error`
+</ResponseField>
+<ResponseField name="data" type="ProviderConnectionError">
+
+<Expandable title="ProviderConnectionError" defaultOpen="true">
+<ResponseField name="provider" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="data" type="ProviderConnectionError" required="true">
-<Expandable title="ProviderConnectionError">
-<ResponseField name="provider" type="string" required="true">
+<ResponseField name="user_id" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="user_id" type="string" required="true">
+<ResponseField name="user_key" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="user_key" type="string" required="true">
+<ResponseField name="message" type="string" required="True">
 
 </ResponseField>
-<ResponseField name="message" type="string" required="true">
-
-</ResponseField>
-<ResponseField name="error_details" type="string" required="true">
+<ResponseField name="error_details" type="string" required="True">
 
 </ResponseField>
 </Expandable>
@@ -31,11 +32,11 @@ api: "GET /"
   "event_type": "provider.connection.error",
   "data": {
     "provider": "oura",
-    "user_key": "49b330e0-2790-425f-be54-396a921e9abc",
-    "user_id": "efd4ee20-40cd-49d4-8152-3c51fc9193f0",
+    "user_key": "1c17c829-9359-49a2-b0e9-b88b10179a4c",
+    "user_id": "16cf1b1e-8803-4509-af92-f3ec51ec1759",
     "message": "We are having issues fetching information for user.                             We won't try to fetch again from this specific provider. Please reconnect device.",
     "error_details": "Failed to pull provider data"
   }
 }
 ```
-</ResponseExample> 
+</ResponseExample>
